--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,7 +14,7 @@
 
 	<script src="https://cdn.babylonjs.com/babylon.js"></script>
 	<script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-	<script src="https://cdn.babylonjs.com/ammo.js"></script>
+	<!-- <script src="https://cdn.babylonjs.com/ammo.js"></script> -->
 </body>
 
 </html>
