--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#444">
-	<title>Babylon.js</title>
+	<title>GranTurismo</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 
 	<script src="https://cdn.babylonjs.com/babylon.js"></script>
 	<script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-	<!-- <script src="https://cdn.babylonjs.com/ammo.js"></script> -->
+	<script src="https://cdn.babylonjs.com/ammo.js"></script>
 </body>
 
 </html>
